--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -16,8 +16,8 @@
   #hamburger-nav {
     display: flex;
   }
-  #experience,
-  .experience-details-container {
+  #skills,
+  .skills-details-container {
     margin-top: 2rem;
   }
 
@@ -89,7 +89,7 @@
     font-size: 1rem;
   }
 
-  .experience-sub-title {
+  .skills-sub-title {
     font-size: 1.25rem;
   }
 
@@ -99,7 +99,7 @@
     text-align: center;
   }
 
-  .experience-details-container {
+  .skills-details-container {
     width: auto;
     height: 46vw;
     justify-content: center;
